--- a/config/database.yml
+++ b/config/database.yml
@@ -21,7 +21,12 @@ default: &default
 
 development:
   <<: *default
-  url: <%= Rails.application.credentials.dig(:development, :database_url) %>
+  username: postgres
+  password: docker
+  host: localhost
+  port: 5432
+  database: planner-dev
+  schema_search_path: public
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -55,7 +60,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  url: <%= Rails.application.credentials.dig(:test, :database_url) %>
+  username: postgres
+  password: docker
+  host: localhost
+  port: 5432
+  database: planner-test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
