--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
 version: "3.8"
 
 services:
-  postgresql:
+  postgresql-dev:
     image: postgres
     ports:
       - 5432:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=planner
+      - POSTGRES_DB=planner-dev
       - PGDATA=/data/postgres
     volumes:
-      - ./data/pg:/data/postgres
+      - ./data/pg:/data/postgres-dev
+
+  postgresql-test:
+    image: postgres
+    ports:
+      - 5433:5432
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=planner-test
+      - PGDATA=/data/postgres
