--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,7 +40,7 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Enabled: false
 
-RSpec/FilePath:
+Rails/FilePath:
   Enabled: false
 
 RSpec/ContextWording:
