--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -35,6 +35,8 @@ jobs:
           wget https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh
           chmod +x wait-for-it.sh
           ./wait-for-it.sh localhost:5432 --timeout=60
+      - name: Create test database
+        run: bin/rails db:create RAILS_ENV=test
       - name: Set up database schema
         run: bin/rails db:schema:load RAILS_ENV=test
       - name: Run tests
